--- a/public/locales/zh-TW/application.json
+++ b/public/locales/zh-TW/application.json
@@ -495,7 +495,7 @@
     "downloadOurApp": "下載並安裝我們的 iOS 應用：",
     "fillInEndpoint": "使用我們的 iOS 應用掃描下方二維碼（其他掃碼應用無效）：",
     "loginApp": "完成綁定，你可以開始使用 iOS 客戶端了。如果掃碼綁定遇到問題，你也可以嘗試手動輸入用戶名和密碼登錄。",
-    "aboutCloudreve": "關於 Cloudreve",
+    "aboutAkiDepot": "關於 秋儲雲穀",
     "githubRepo": "GitHub 倉庫",
     "homepage": "主頁"
   }
